--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": "7.1.*|7.2.*|7.3.*|7.4.*|8.0.*",
-        "bearcms/bearframework-addon": "1.*",
+        "bearcms/bearframework-addon": "^1.33",
         "bearframework/localization-addon": "1.*"
     },
     "autoload": {
