--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
         "bearcms/bearframework-addon": "^1.33",
         "bearframework/localization-addon": "1.*"
     },
+    "require-dev": {
+        "bearcms/addon-tests": "1.*"
+    },
     "autoload": {
         "files": [
             "autoload.php"
